<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/libro_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LibroDetailFragment"
    tools:ignore="MergeRootFrame" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000" >

        <TextView
            android:id="@+id/lblTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            
            android:text="@string/title_libro_title"
            android:textAppearance="?android:attr/textAppearanceSmallInverse" />
    </TableRow>

    <TableRow 
		android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000" >
        
        <EditText
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:ems="300"
            android:maxLength="100"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="#C0C0C0" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:textColor="#000000"
            android:text="@string/title_libro_author"
            android:textAppearance="?android:attr/textAppearanceSmallInverse" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/txtAutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:ems="300"
            android:maxLength="30"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="5dip" />
    </TableRow>
	
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    
        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/action_ok"
        	android:textAppearance="?android:attr/textAppearanceButton"/>
        
	</TableRow>        
</TableLayout>